--- a/src/app/components/pages/admin/admin-dashboard/admin-dashboard.component.scss
+++ b/src/app/components/pages/admin/admin-dashboard/admin-dashboard.component.scss
@@ -1,10 +1,11 @@
 // admin-dashboard.component.scss
+
 .dashboard-container {
     padding: 2rem;
     background-color: #fffaf5;
   
-    h2 {
-      font-size: 24px;
+  h2 {
+    font-size: 24px;
       font-weight: bold;
       color: #3c2f2f;
       margin-bottom: 1.5rem;
@@ -36,6 +37,20 @@
         font-weight: bold;
         color: #a66e38;
       }
+    }
+  }
+
+  @media (max-width: 600px) {
+    .cards {
+      flex-direction: column;
+      align-items: stretch;
+    }
+
+    h2 {
+      font-size: 20px;
+    }
+    .card p {
+      font-size: 20px;
     }
   }
   
