--- a/src/app/components/pages/pago/pago.component.scss
+++ b/src/app/components/pages/pago/pago.component.scss
@@ -272,3 +272,22 @@
   background-color: #ccc;
   color: #333;
 }
+
+.voucher-instruction {
+  color: #6db37f;
+  font-weight: 500;
+  margin-bottom: 1rem;
+}
+
+.progress-text {
+  font-size: 0.9rem;
+  color: #555;
+  margin-bottom: 1.5rem;
+}
+
+.allowed-formats {
+  font-size: 0.85rem;
+  color: #444;
+  margin-top: 0.25rem;
+  margin-bottom: 0.25rem;
+}
