--- a/src/app/components/pages/admin/admin-layout/admin-layout.component.scss
+++ b/src/app/components/pages/admin/admin-layout/admin-layout.component.scss
@@ -60,11 +60,13 @@
       display: block;
     }
 
+    $nav-height: 60px; // altura aproximada del navbar
+
     .sidebar {
       position: fixed;
       left: -240px;
-      top: 0;
-      height: 100%;
+      top: $nav-height;
+      height: calc(100% - $nav-height);
       transition: left 0.3s;
       z-index: 1000;
     }
@@ -77,10 +79,10 @@
       .overlay {
         display: block;
         position: fixed;
-        top: 0;
+        top: $nav-height;
         left: 0;
         width: 100%;
-        height: 100%;
+        height: calc(100% - $nav-height);
         background: rgba(0, 0, 0, 0.5);
         z-index: 900;
       }
